--- a/src/components/CustomCursor.css
+++ b/src/components/CustomCursor.css
@@ -2,16 +2,16 @@
 
 .custom-cursor {
   position: fixed;
-  width: 30px; /* Diameter of the ring */
-  height: 30px; /* Diameter of the ring */
-  border: 5px solid orange; /* Orange ring */
-  border-radius: 50%; /* Make it circular */
-  pointer-events: none; /* Ensure it doesn't interfere with mouse events */
-  transform: translate(-50%, -50%); /* Center the cursor */
-  z-index: 1000; /* Ensure it's on top of other elements */
+  width: 30px; /* all custom cursor settings */
+  height: 30px; 
+  border: 5px solid orange; 
+  border-radius: 50%; 
+  pointer-events: none; 
+  transform: translate(-50%, -50%);
+  z-index: 1000; 
 }
 
-/* Optional: Hover effect to change color when hovering over links */
+
 a:hover ~ .custom-cursor {
-  border-color: darkorange; /* Change border color on hover */
+  border-color: darkorange;
 }
