--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -1,6 +1,6 @@
 /* src/components/Projects.css */
 
-/* General styles for the projects section */
+
 #projects {
   margin: 20px auto; 
   padding: 20px; 
@@ -10,11 +10,11 @@
   font-size: 18px
 }
 
-/* Light Mode Styles */
+
 #projects h2, #projects h3 {
-  color: #b85412; /* Default heading color in light mode */
+  color: #b85412; 
 }
 
 #projects p {
-  color: #b85412; /* Default paragraph color in light mode */
+  color: #b85412; 
 }
