--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: hsl(0, 2%, 9%); /* Default background color */
-  color: #000000; /* Default text color */
+  background-color: hsl(0, 2%, 9%); 
+  color: #000000; 
 }
 
